# cpp-utils

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.bat
.github/workflows/: .make.yml.un~  make.yml  make.yml~
include/: fnv1a.hpp  strings.hpp
test/: CMakeLists.txt  fnv1a.cc  strings.cc
